# sharedbox

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  install-vcpkg.sh  noxfile.py  pyproject.toml  setup.py
.github/workflows/: ci.yaml  test.yaml
cpp_src/: shared_dict.hpp
docs/: api.md  readme.md
examples/: basic_comparison.py  initialization_demo.py  memory_usage.py  mixed_data_benchmark.py
src/sharedbox/: __init__.py  _shareddict.pyi  shareddict.cpp  shareddict.hpp
src/sharedbox/_core/: sharedmemory.cpp  sharedmemory.hpp
tests/: test_initialization_data.py  test_mixed_data_types.py  test_multiprocess_containers.py  test_numpy_support.py
