[build-system]
requires = ["scikit-build-core>=0.10.7", "nanobind>=2.0.0", "setuptools-scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "sharedbox"
dynamic = ["version"]
description = "Python containers using shared memory."
authors = [
    {name = "Jacopo Abramo", email = "jacopo.abramo@gmail.com"}
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/sharedbox/_version.py"]
build-dir = "build"

[tool.scikit-build.cmake]
build-type = "Release"

[tool.setuptools_scm]
version_file = "src/sharedbox/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.cibuildwheel]
skip = ["*-win32"]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]

[tool.cibuildwheel.linux]
before-all = [
    # prepare the system
    "yum update -y || apk update",
    "yum install -y curl zip unzip tar git || apk add --no-cache curl unzip tar git",
    # clone vcpkg with shallow history to save space
    "cd /opt && git clone --depth 1 https://github.com/microsoft/vcpkg.git",
    "cd /opt/vcpkg && ./bootstrap-vcpkg.sh",
    # install boost-interprocess via vcpkg
    "/opt/vcpkg/vcpkg install boost-interprocess@1.88.0",
    # cleanup to save disk space
    "rm -rf /opt/vcpkg/buildtrees /opt/vcpkg/downloads",
]
environment = { VCPKG_ROOT="/opt/vcpkg" }

[tool.cibuildwheel.windows]
before-all = [
    # vcpkg already included in the runner
    # install boost-interprocess via vcpkg
    "vcpkg install boost-interprocess@1.88.0",
]
environment = { VCPKG_ROOT="C:/vcpkg" }
    

[dependency-groups]
dev = [
    "numpy>=2.2.6",
    "pytest>=8.4.2",
]
lint = [
    "ruff>=0.13.2",
]
